# MySindic

./: .env.example  .gitignore  .replit  CHANGELOG.md  CORRECTION_MAINTENANCE.md  DOCUMENTATION_EN.md  DOCUMENTATION_FR.md  IDENTIFIANTS_DEMO.md  PROBLEMES_CRITIQUES.md  PROJECT_TRACKING.md  README.md  TECHNICAL_DOCUMENTATION.md  clean_and_recreate_demo.py  deploy_vps.sh  init_db.py  main.py  pyproject.toml  replit.md  requirements.txt  reset_db.py  test_maintenance_api.py
attached_assets/: Pasted-Analyse-la-version-actuel-de-l-application-ajout-le-favicon-et-met-a-jour-les-donn-es-demos-au-d-p-1763734466339_1763734466340.txt  Pasted-Analyse-la-version-actuel-de-l-application-ajout-le-favicon-et-met-a-jour-les-donn-es-demos-au-d-p-1763735533638_1763735533638.txt
backend/: app.py  config.py  init_demo_data.py
backend/models/: __init__.py  app_settings.py  charge.py  document.py  general_assembly.py  litigation.py  maintenance.py  maintenance_comment.py  maintenance_document.py  maintenance_log.py  news.py  payment.py  permission.py  poll.py  residence.py  residence_admin.py  user.py
backend/routes/: __init__.py  admin.py  auth.py  resident.py
backend/services/: agora_service.py  notification_service.py
backend/templates/: base.html  index.html
backend/utils/: __init__.py  decorators.py  (+2 more)
docs/: API_REFERENCE.md  ARCHITECTURE_TECHNIQUE.md  GUIDE_COMMERCIAL.md  GUIDE_UTILISATEUR.md  INSTALLATION.md  README.md  SECURITE.md
documentation/: CHANGELOG.md  IDENTIFIANTS_DEMO.md  PROJECT_TRACKING.md  README.md  README_EN.md  README_FR.md  TECHNICAL_DOCUMENTATION.md
(+59 files in other folders)
