[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography==41.0.7",
    "email-validator==2.1.0",
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "flask-login==0.6.3",
    "flask-mail==0.9.1",
    "flask-migrate==4.0.5",
    "flask-sqlalchemy==3.1.1",
    "gunicorn==21.2.0",
    "psycopg2-binary==2.9.9",
    "pyjwt==2.8.0",
    "python-dotenv==1.0.0",
    "sqlalchemy==2.0.23",
    "werkzeug==3.0.1",
]
